--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -47,3 +47,39 @@
     padding-right: 30px;
   }
 }
+
+@media screen and (max-width: 450px) {
+  .footer {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .footer__title {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .footer__wrapper {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
+  }
+
+  .footer__links {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer__year {
+    order: 1;
+    font-size: 12px;
+    line-height: 15px;
+    padding-top: 18px;
+  }
+
+  .footer__link {
+    font-size: 12px;
+    line-height: 15px;
+    padding-bottom: 12px;
+  }
+}
