--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   padding: 0 70px;
   width: 100%;
+  position: relative;
 }
 
 .header_color_white {
@@ -16,14 +17,14 @@
   background-color: #073042;
 }
 
-.header__link_type_logo {
+/* .header__link_type_logo {
   border-radius: 50%;
   flex-basis: 100px;
-}
+} */
 
-.header__logo {
+/* .header__logo {
   display: block;
-}
+} */
 
 .header__wrapper {
   display: flex;
@@ -69,9 +70,177 @@
   display: flex;
   justify-content: center;
   column-gap: 16px;
+  width: 100%;
 }
 
-.header__navLink {
+/* .header__navLink {
+  font-size: 13px;
+  line-height: 18px;
+  color: black;
+  font-weight: 400;
+  text-decoration: none;
+} */
+
+/* .header__navLink:hover {
+  opacity: 0.7;
+} */
+
+/* .header__navigation_active {
+  font-weight: 500;
+} */
+
+/* .header__account {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+} */
+
+/* .header__account_type_text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  margin-right: 17px;
+  color: black;
+} */
+
+/* .header__account_type_photo {
+  background-color: #f9f9f9;
+  border-radius: 4px;
+  padding: 8px 7.25px;
+} */
+
+.burger {
+  display: none;
+  position: fixed;
+  right: 22px;
+}
+
+.burger__label::after {
+  content: "☰";
+}
+
+.burger__menu {
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in, visibility 0.3s ease-in;
+  position: fixed;
+  overflow: scroll;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  max-height: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.burger__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.burger__nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 67.6%;
+  background-color: white;
+  padding-top: 159px;
+}
+
+.burger__item {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  padding-top: 28px;
+}
+
+.burger__item:first-of-type {
+  padding-top: 0;
+}
+
+.burger__item:last-of-type {
+  padding-top: 621px;
+  padding-bottom: 99px;
+}
+
+.burger__link {
+  text-decoration: none;
+  color: black;
+  padding-bottom: 4px;
+  border-bottom: 2px solid transparent;
+}
+
+.burger__account {
+  color: black;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 17px;
+}
+
+.burger__account_type_text {
+  font-size: 14px;
+  line-height: 16px;
+  margin: 0;
+}
+
+.burger__account_type_photo {
+  background-color: #f9f9f9;
+  border-radius: 4px;
+  padding: 8px 7.25px;
+  width: 26px;
+  box-sizing: border-box;
+}
+
+.burger__navigation_active {
+  border-bottom: 2px solid black;
+}
+
+.nav__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__item {
+  flex-basis: 250px;
+}
+
+.nav__logo {
+  font-size: 0;
+}
+
+.nav__logo:hover {
+  opacity: 0.7;
+}
+
+.nav__sub-items {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+.nav__navLink {
   font-size: 13px;
   line-height: 18px;
   color: black;
@@ -79,39 +248,66 @@
   text-decoration: none;
 }
 
-.header__navLink:hover {
+.nav__navLink:hover {
   opacity: 0.7;
 }
 
-.header__navigation_active {
+.nav__navigation_active {
   font-weight: 500;
 }
 
-.header__account {
+.nav__account {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
   text-decoration: none;
-}
-
-.header__account_type_text {
-  font-weight: 500;
+  gap: 17px;
+  color: black;
   font-size: 14px;
   line-height: 16px;
-  margin-right: 17px;
-  color: black;
 }
 
-.header__account_type_photo {
+.nav__account_type_photo {
   background-color: #f9f9f9;
   border-radius: 4px;
   padding: 8px 7.25px;
 }
 
+
 @media screen and (max-width: 861px) {
   .header {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .nav__sub-items,
+  .nav__account {
+    display: none;
+  }
+
+  .burger__label {
+    display: block;
+    font-size: 32px;
+  }
+
+  .burger__checkbox:checked+.burger__label+.burger__menu {
+    display: flex;
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.3s ease-in, visibility 0.3s ease-in;
+    z-index: 1;
+    background-color: rgb(0, 0, 0, 0.3);
+  }
+
+  .burger__checkbox:checked+.burger__label {
+    z-index: 2;
+    padding-right: 0;
+    font-size: 38px;
+  }
+
+  .burger__checkbox:checked+.burger__label::after {
+    content: "×";
   }
 }
 
@@ -137,5 +333,30 @@
   .header__link_type_login {
     width: 54px;
     height: 26px;
+  }
+
+  .burger__nav {
+    width: 100%;
+  }
+
+  .burger__checkbox:checked+.burger__label {
+    right: 17px;
+    top: 5px;
+  }
+
+  .burger__nav {
+    padding-top: 145px;
+  }
+
+  .burger__item {
+    padding-top: 24px;
+  }
+
+  .burger__link {
+    padding-bottom: 6px;
+  }
+
+  .burger__item:last-of-type {
+    padding: 444px 0 48px;
   }
 }
