--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -43,13 +43,13 @@
   width: 100%;
 }
 
-.login__input:invalid {
+/* .login__input:invalid {
   border: 1px solid red;
 }
 
 .login__input:valid {
   border: 1px solid green;
-}
+} */
 
 .login__input-error {
   display: inline-block;
