--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -46,6 +46,10 @@
 .login__input-error {
   display: inline-block;
   min-height: 24px;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #FF3055;
 }
 
 .login__button {
@@ -60,6 +64,11 @@
   padding: 13px 0;
   margin-top: 195px;
   cursor: pointer;
+}
+
+.login__button:disabled {
+  background: #F8F8F8;
+  color: #C2C2C2;
 }
 
 .login__button:hover {
