--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -26,6 +26,9 @@
   color: #3456F3;
   text-decoration: none;
   margin-top: 184px;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 450px) {
