--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -46,6 +46,10 @@
 .register__input-error {
   display: inline-block;
   min-height: 24px;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #FF3055;
 }
 
 .register__button {
@@ -59,6 +63,12 @@
   line-height: 17px;
   padding: 13px 0;
   cursor: pointer;
+  margin-top: 195px;
+}
+
+.register__button:disabled {
+  background: #F8F8F8;
+  color: #C2C2C2;
 }
 
 .register__button:hover {
