--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -228,6 +228,10 @@
   padding: 8px 7.25px;
 }
 
+.nav__navLink_green {
+  color: white;
+}
+
 
 @media screen and (max-width: 861px) {
   .header {
@@ -262,6 +266,7 @@
 
   .burger__checkbox:checked+.burger__label::after {
     content: "×";
+    color: black;
   }
 }
 
