--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -11,31 +11,53 @@
   margin: 74px auto 106px;
 }
 
+.profile__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 410px;
+  width: 100%;
+}
+
 .profile__string {
   display: flex;
   justify-content: space-between;
-  max-width: 410px;
   width: 100%;
   border-bottom: 1px solid #E8E8E8;
+  padding: 17px 0 19px;
 }
 
 .profile__string:last-of-type {
   border-bottom: none;
-  margin-bottom: 204px;
+  padding-top: 0;
 }
 
 .profile__key {
-  margin: 17px 0 16px;
+  margin: 0;
   font-weight: 500;
   font-size: 11px;
   line-height: 13px;
 }
 
 .profile__text {
-  margin: 17px 0 16px;
+  margin: 0;
   font-weight: 400;
   font-size: 11px;
   line-height: 13px;
+  border: 0;
+  padding: 0;
+  text-align: end;
+}
+
+.profile__input-error {
+  display: inline-block;
+  min-height: 16px;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #FF3055;
+  text-align: center;
 }
 
 .profile__edit {
@@ -44,7 +66,7 @@
   font-size: 13px;
   line-height: 16px;
   background-color: transparent;
-  margin-bottom: 16px;
+  margin: 185px 0 16px;
   cursor: pointer;
   padding: 0;
 }
@@ -74,12 +96,12 @@
     margin-bottom: 79px;
   }
 
-  .profile__string:last-of-type {
-    margin-bottom: 194px;
-  }
-
   .profile__exit {
     margin-bottom: 269px;
+  }
+
+  .profile__edit {
+    margin: 167px 0 16px;
   }
 }
 
@@ -93,7 +115,15 @@
     margin-bottom: 64px;
   }
 
+  .profile__edit {
+    font-size: 12px;
+    line-height: 15px;
+    margin: 327px 0 16px;
+  }
+
   .profile__exit {
     margin-bottom: 40px;
+    font-size: 12px;
+    line-height: 15px;
   }
 }
