feat: Добавил контекст в компонент Protected Route

--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -47,6 +47,11 @@
   cursor: pointer;
 }
 
+.search__button:disabled {
+  background: #F8F8F8;
+  color: #C2C2C2;
+}
+
 .search__button:hover {
   opacity: 0.8;
 }
