--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -22,6 +22,13 @@
   align-self: center;
 }
 
+.moviesCardList__nothing {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+}
+
 .moviesCardList__more {
   font-weight: 500;
   font-size: 12px;
